fix: change height to max-height in ScrollbarArea__wrapper

--- a/src/components/ScrollbarArea.scss
+++ b/src/components/ScrollbarArea.scss
@@ -9,7 +9,7 @@
   margin: 0 auto;
 
   &__wrapper {
-    height: 100%;
+    max-height: 100%;
     padding: 0.25rem;
     overflow: hidden;
     background-color: #fafafe;
